--- a/blocks/about.css
+++ b/blocks/about.css
@@ -2,7 +2,7 @@
   background-color: #0a2850;
   color: #fff;
   display: flex;
-  direction: column;
+  flex-direction: column;
   justify-content: space-between;
   padding: 100px 80px 173px;
   position: relative;
@@ -10,6 +10,7 @@
   z-index: 0;
 }
 .about__title {
+  margin: 0;
   max-width: 251px;
   font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
