--- a/blocks/form.css
+++ b/blocks/form.css
@@ -19,7 +19,7 @@
   line-height: 30px;
 }
 .form__label {
-  font-family: Inter;
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
