--- a/blocks/header.css
+++ b/blocks/header.css
@@ -14,6 +14,7 @@
   height: 568px;
   top: 124px;
   right: 5px;
+  z-index: 1;
 }
 .header__title {
   margin: 182px 0 0;
@@ -23,6 +24,7 @@
   line-height: 72px;
   letter-spacing: -0.6px;
   max-width: 729px;
+  z-index: 0;
 }
 .header__span-accent {
   color: #3f96f3;
@@ -31,6 +33,7 @@
   font-style: italic;
   font-size: 60px;
   line-height: 72px;
+  z-index: 0;
 }
 
 .header__description {
@@ -56,18 +59,4 @@
 }
 .header__paragraph {
   margin: 0;
-}
-
-.header__link {
-  color: #e96e3a;
-  text-decoration: none;
-}
-.header__link:hover {
-  color: #d35722;
-  cursor: pointer;
-}
-
-.header__address {
-  margin: 0;
-  color: #838383;
 }
