--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -5,11 +5,14 @@
   align-items: center;
   background-color: #fff;
   background-image: url(../images/background_menu.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .menu__title {
   margin: 0 0 24px;
   max-width: 780px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
