--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -19,6 +19,8 @@
   line-height: 30px;
 }
 .recipes__videos {
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
   gap: 40px;
@@ -35,4 +37,11 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
+  padding: 0;
+}
+
+.recipes__iframe {
+  width: 560px;
+  height: 315px;
+  border: none;
 }
