--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -2,6 +2,9 @@
   padding: 100px 0 120px;
   background-color: #d9e7ff;
   background-image: url(../images/background_reservation.svg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .reservation__title {
   margin: 0 0 80px;
